--- a/SerialSync/SerialSync.csproj
+++ b/SerialSync/SerialSync.csproj
@@ -58,11 +58,16 @@
 
     <ItemGroup>
         <PackageReference Include="BlazorAnimate" Version="3.0.0" />
+        <PackageReference Include="ElegantSeries.MauiSerialPort" Version="0.0.2" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
         <PackageReference Include="MudBlazor" Version="8.4.0" />
         <PackageReference Include="Toolbelt.Blazor.SplitContainer" Version="2.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services\" />
     </ItemGroup>
 
 </Project>
