--- a/SerialSync/SerialSync.csproj
+++ b/SerialSync/SerialSync.csproj
@@ -69,4 +69,8 @@
         <PackageReference Include="Toolbelt.Blazor.SplitContainer" Version="2.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
