--- a/SerialSync/SerialSync.csproj
+++ b/SerialSync/SerialSync.csproj
@@ -64,8 +64,8 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
         <PackageReference Include="MudBlazor" Version="8.4.0" />
-        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+        <PackageReference Include="NLog" Version="5.4.0" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.4.0" />
         <PackageReference Include="Toolbelt.Blazor.SplitContainer" Version="2.0.2" />
     </ItemGroup>
 
