--- a/SerialSync/SerialSync.csproj
+++ b/SerialSync/SerialSync.csproj
@@ -67,13 +67,13 @@
 
     <ItemGroup>
         <PackageReference Include="BlazorAnimate" Version="3.0.0" />
-        <PackageReference Include="ElegantSeries.MauiSerialPort" Version="0.0.2" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
         <PackageReference Include="MudBlazor" Version="8.4.0" />
         <PackageReference Include="NLog" Version="5.4.0" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.4.0" />
+        <PackageReference Include="System.IO.Ports" Version="9.0.3" />
         <PackageReference Include="Toolbelt.Blazor.SplitContainer" Version="2.0.2" />
     </ItemGroup>
 
